apps/actual-budgets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: default
  labels:
    app: actual
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actual
  template:
    metadata:
      labels:
        app: actual
    spec:
      containers:
      - name: actual
        image: ghcr.io/actualbudget/actual-server:23.11.0
        volumeMounts:
        - mountPath: /data
          name: data
        ports:
        - containerPort: 5006
          name: http
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: actual-server-data
