apps/actual-budgets/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
spec:
  selector:
    app: actual
  ports:
    - name: http
      protocol: TCP
      port: 5006
      targetPort: http
